--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevoU Fundamental</title>
     <link rel="stylesheet" href="css/style.css">
+    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    
+
+    <header class="header-wrapper">
+        <div class="logo"></div>
+
+        <div class="menu">
+            <table>
+                <tr>
+                    <td>Home</td>
+                    <td>Our Profile</td>
+                    <td>Portfolio</td>
+                    <td>Message Us</td>
+                </tr>
+            </table>
+        </div>
+    </header>
+    <hr>
+    <main>
+        <!-- Ini Home Content -->
+         <section>
+
+         </section>
+        <!-- Ini Our Portfolio content -->
+         <section>
+
+         </section>
+        <!-- Ini Portofolio content -->
+         <section>
+
+         </section>
+        <!-- Ini Message Us content -->
+         <section>
+
+         </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
