Memberikan detail navbar dan menambahkan script teks welcome

--- a/index.html
+++ b/index.html
@@ -13,23 +13,32 @@
 <body>
 
     <header class="header-wrapper">
-        <div class="logo"></div>
+        <div class="logo">
+            <img src="src/logo.png" alt="">
+        </div>
 
         <div class="menu">
-            <table>
-                <tr>
-                    <td>Home</td>
-                    <td>Our Profile</td>
-                    <td>Portfolio</td>
-                    <td>Message Us</td>
-                </tr>
-            </table>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Our Profile</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Message Us</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    <hr>
+    
     <main>
         <!-- Ini Home Content -->
          <section>
+            <div class="container">
+                <article class="home-text">
+                    <h1>Hai <span class="nama"></span> Welcome to Website</h1>
+                    <p>Silahkan nikmati fitur yang ada</p>
+                </article>
+            </div>
+
             
          </section>
         <!-- Ini Our Portfolio content -->
@@ -51,5 +60,6 @@
 
     </footer>
 
+    <script src="Js/script.js"></script>
 </body>
 </html>
