Menambahkan banner slide dan membuatnya responsive

--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@
          <section>
             <div class="container">
                 <article class="home-text">
-                    <h1>Hai <span class="nama"></span> Welcome to Website</h1>
-                    <p>Silahkan nikmati fitur yang ada</p>
+                    <h1>Hai <span class="nama"></span>, Welcome to Website</h1>
+                    <p>Ini merupakan sebuah website latihan.</p>
                 </article>
+
+                <div class="slide">
+                    <img src="src/image1.jfif" alt="Slide 1">
+                </div>
+                <div class="slide">
+                    <img src="src/image2.jfif" alt="Slide 2">
+                </div>
+                <div class="slide">
+                    <img src="src/image3.jfif" alt="Slide 3">
+                </div>
             </div>
 
             
