Menambahkan fitur our profile

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
     <header class="header-wrapper">
         <div class="logo">
-            <img src="src/logo.png" alt="">
+            <img src="src/logo2.jfif" alt="">
+            <h2>Pixels</h2>
         </div>
 
         <div class="menu">
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Our Profile</a></li>
+                    <li><a href="#our-profile">Our Profile</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Message Us</a></li>
                 </ul>
@@ -35,7 +36,7 @@
             <div class="container">
                 <article class="home-text">
                     <h1>Hai <span class="nama"></span>, Welcome to Website</h1>
-                    <p>Ini merupakan sebuah website latihan.</p>
+                    <p>Ini merupakan sebuah website latihan dengan tema pixels art.</p>
                 </article>
 
                 <div class="slide">
@@ -50,8 +51,33 @@
             </div>
 
             
-         </section>
-        <!-- Ini Our Portfolio content -->
+        <!-- Ini Our Profile content -->
+         </section ">
+            <div class="profile-container" id="our-profile">
+                <div class="profile-content">
+                    <h1>Our Profile</h1>
+
+                    <div class="card-wrapper">
+                        <div class="card">
+                            <img src="src/logo2.jfif" alt="Logo 1">
+                            <h3>Pixel Art Enthusiast</h3>
+                            <p>Jelajahi dunia kesempurnaan piksel. Tim penggemar seni piksel kami menciptakan seni yang memukau, satu piksel dalam satu
+                            waktu.</p>
+                        </div>
+                        <div class="card">
+                            <img src="src/logo2.jfif" alt="Logo 2">
+                            <h3>Creative Designer</h3>
+                            <p>Dari permainan video retro hingga lanskap digital modern, desainer kreatif kami mengubah piksel menjadi pengalaman
+                            visual yang menakjubkan.</p>
+                        </div>
+                        <div class="card">
+                            <img src="src/logo2.jfif" alt="Logo 3">
+                            <h3>Pixel Art Innovators</h3>
+                            <p>Merangkul pesona grafis jadul sambil mendorong batas-batas yang mungkin dengan seni piksel. Inovasi bertemu tradisi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
          <section>
 
          </section>
